ci: Add missing release plugins

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 	},
 	"devDependencies": {
 		"@semantic-release/changelog": "^3.0.4",
+		"@semantic-release/git": "^7.0.16",
+		"@semantic-release/npm": "^5.2.0",
 		"@vue/cli-plugin-eslint": "^4.0.0",
 		"@vue/cli-plugin-pwa": "^4.0.0",
 		"@vue/cli-plugin-router": "^4.0.0",
