feat: Add deploy config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
 		"lint": "vue-cli-service lint",
-		"semantic-release": "semantic-release"
+		"semantic-release": "semantic-release",
+		"postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi ",
+		"start": "node server.js"
 	},
 	"dependencies": {
 		"register-service-worker": "^1.6.2",
