--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"express": "^4.17.1",
+		"express-force-https": "^1.0.0",
 		"register-service-worker": "^1.6.2",
 		"vue": "^2.6.10",
 		"vue-class-component": "^7.0.2",
