--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.25",
+		"@fortawesome/free-solid-svg-icons": "^5.11.2",
+		"@fortawesome/vue-fontawesome": "^0.1.7",
+		"axios": "^0.19.0",
+		"buefy": "^0.8.5",
+		"bulma": "^0.8.0",
+		"class-transformer": "^0.2.3",
 		"express": "^4.17.1",
 		"express-force-https": "^1.0.0",
+		"logdown": "^3.2.8",
 		"register-service-worker": "^1.6.2",
 		"vue": "^2.6.10",
 		"vue-class-component": "^7.0.2",
+		"vue-i18n": "^8.15.0",
 		"vue-property-decorator": "^8.1.0",
 		"vue-router": "^3.0.6",
+		"vuelidate": "^0.7.4",
 		"vuex": "^3.0.1"
 	},
 	"devDependencies": {
