--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@types/qs": "^6.5.3",
     "axios": "^0.19.0",
     "buefy": "^0.8.5",
     "bulma": "^0.8.0",
@@ -21,11 +22,12 @@
     "express": "^4.17.1",
     "express-force-https": "^1.0.0",
     "logdown": "^3.2.8",
+    "qs": "^6.9.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
+    "vue-class-component": "^7.1.0",
     "vue-i18n": "^8.15.0",
-    "vue-property-decorator": "^8.1.0",
+    "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.0.6",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
@@ -34,6 +36,7 @@
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/git": "^7.0.16",
     "@semantic-release/npm": "^5.2.0",
+    "@types/vuelidate": "^0.7.7",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-pwa": "^4.0.0",
     "@vue/cli-plugin-router": "^4.0.0",
@@ -43,10 +46,8 @@
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
-    "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
     "semantic-release": "^15.13.27",
     "typescript": "~3.5.3",
