--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "logdown": "^3.2.8",
     "qs": "^6.9.0",
     "register-service-worker": "^1.6.2",
+    "v-clipboard": "^2.2.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-i18n": "^8.15.0",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.0.6",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.4",
