--- a/package.json
+++ b/package.json
@@ -35,24 +35,26 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/git": "^7.0.16",
-    "@semantic-release/npm": "^5.2.0",
+    "@semantic-release/changelog": "5.0.0",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/npm": "7.0.3",
     "@types/vuelidate": "^0.7.7",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-pwa": "^4.0.0",
     "@vue/cli-plugin-router": "^4.0.0",
     "@vue/cli-plugin-typescript": "^4.0.0",
     "@vue/cli-plugin-vuex": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "5.0.1",
+    "eslint": "6.8.0",
+    "eslint-plugin-vue": "6.2.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "semantic-release": "^15.13.27",
-    "typescript": "~3.5.3",
+    "semantic-release": "17.0.4",
+    "typescript": "3.8.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
