ci(node): update version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/copa-app
     docker:
-      - image: circleci/node:10.18-jessie-browsers-legacy
+      - image: circleci/node:10.18
     steps:
       - checkout
       - restore_cache:
