--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "@types/qs": "^6.5.3",
+    "@vue/composition-api": "^0.4.0",
     "axios": "^0.19.0",
     "buefy": "^0.8.5",
     "bulma": "^0.8.0",
@@ -30,7 +31,6 @@
     "vue-i18n": "^8.15.0",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.0.6",
-    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.2"
   },
@@ -38,7 +38,6 @@
     "@semantic-release/changelog": "5.0.0",
     "@semantic-release/git": "9.0.0",
     "@semantic-release/npm": "7.0.3",
-    "@types/vuelidate": "^0.7.7",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
