--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "logdown": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "register-service-worker": "^1.7.1",
+    "v-clipboard": "^2.2.3",
     "validator": "^13.0.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.5",
